--- a/style.css
+++ b/style.css
@@ -1,79 +1,136 @@
+/* Body Styling */
+
 body {
-  background: rgb(4,129,200);
-  background: linear-gradient(90deg, rgba(4,129,200,1) 32%, rgb(70, 198, 223) 100%);
   color: white;
+  background-color: black;
   font-family: Times New Roman;
+  padding: 0px;
+  margin:0px;
+  box-sizing: border-box;
+  font-family: 'Poppins', sans-serif;
+}
+
+/* Nav Bar Styling, Note: Flexboxes are OP! */
+
+h4 {
+  font-family: 'Great Vibes', cursive;
+  font-size: 45px;
+  color: rgb(240, 237, 237);
+}
+
+nav {
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  max-height: 8wh;
+  background-color: rgb(0, 0, 0);
+  color:white;
+}
+
+.nav-links {
+  list-style: none;
+  display: flex;
+  align-items: center;
+  justify-content: space-around;
+  width: 50%;
+  font-weight: bold;
+}
+
+
+/* Wrapper for Two Sections */
+.wrapper {
+  display: flex;
+}
+
+section.text-section {
+  width: 50%;
+  background-color: black;
+  color:rgb(240, 237, 237);
+}
+
+aside.image-section {
+  width: 50%;
+  background: black;
+}
+
+/* Tabbing */
+
+[data-tab-content] {
+  display: none;
+}
+
+.active[data-tab-content] {
+  display: block;
+}
+
+body {
+  padding: 0;
+  margin: 0;
+}
+
+.tabs {
+  display: flex;
+  justify-content: space-around;
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+}
+
+.tab {
+  cursor: pointer;
   padding: 10px;
 }
 
-h1 {
-  text-align: center;
+.tab.active {
+  background-color: rgb(240, 237, 237);
+  color: black;
+}
+
+.tab:hover {
+  background-color: rgb(255, 185, 197);
+  color: black;
+}
+
+.tab-content {
+  margin-left: 20px;
+  margin-right: 20px;
 }
 
 
-.affected-row {
-  background: #cae4ca;
-  padding: 10px;
-  margin-bottom: 20px;
-  border: #bdd6bd 1px solid white;
-  border-radius: 2px;
-  color: #6e716e;
-}
-.error-message {
-  background: #eac0c0;
-  padding: 10px;
-  margin-bottom: 20px;
-  border: #dab2b2 1px solid white;
-  border-radius: 2px;
-  color: #5d5b5b;
-}
-#hide { position:absolute; top:-1px; left:-1px; width:1px; height:1px; }
-.boottable{border: 2px solid white;}
-table, th, td {
-border: 1px solid white;
-padding: 5px;
-}
-
-.nav-tabs .nav-item .nav-link {
-  
-  color: white;
-  font-size: 20px;
-  
-}
-
-.nav-tabs .nav-item .nav-link.active {
-  color: rgb(0, 96, 239);
-  font-size: 20px;
-  
-}
-
-h3 {
-font-size: 22px;
-}
+/* Styling Links to Look Cool */
 
 a:link {
-  color: white;
+  color: rgb(175, 225, 233);
   background-color: transparent;
   text-decoration: none;
 }
+
 a:visited {
-  color: pink;
+  color: rgb(255, 185, 197);
   background-color: transparent;
   text-decoration: none;
 }
+
 a:hover {
-  color: red;
+  color: rgb(87, 199, 240);
   background-color: transparent;
   text-decoration: underline;
 }
+
 a:active {
-  color: yellow;
+  color: rgb(224, 57, 232);
   background-color: transparent;
   text-decoration: underline;
 }
 
-iframe {
-border: 2px solid white;
+/* Phone Screen Set Up */
+
+@media screen and (max-width:1000px){
+  section.text-section {
+    width:      100%;
+  }
+  aside.image-section {
+    display: none;
+  }
+  
 }
-
-
