--- a/style.css
+++ b/style.css
@@ -127,10 +127,13 @@ a:active {
 
 @media screen and (max-width:1000px){
   section.text-section {
-    width:      100%;
+    width: 100%;
   }
   aside.image-section {
-    display: none;
+   display: none;
+  }
+  h4 {
+   font-size: 25px;
   }
   
 }
