--- a/style.css
+++ b/style.css
@@ -1,17 +1,15 @@
 /* Body Styling */
-
 body {
   color: white;
   background-color: black;
   font-family: Times New Roman;
   padding: 0px;
-  margin:0px;
+  margin: 0px;
   box-sizing: border-box;
   font-family: 'Poppins', sans-serif;
 }
 
 /* Nav Bar Styling, Note: Flexboxes are OP! */
-
 h4 {
   font-family: 'Great Vibes', cursive;
   font-size: 45px;
@@ -24,7 +22,7 @@ nav {
   align-items: center;
   max-height: 8wh;
   background-color: rgb(0, 0, 0);
-  color:white;
+  color: white;
 }
 
 .nav-links {
@@ -36,7 +34,6 @@ nav {
   font-weight: bold;
 }
 
-
 /* Wrapper for Two Sections */
 .wrapper {
   display: flex;
@@ -45,31 +42,36 @@ nav {
 section.text-section {
   width: 50%;
   background-color: black;
-  color:rgb(240, 237, 237);
+  color: rgb(240, 237, 237);
 }
 
+/* Color changing background */
 aside.image-section {
   width: 50%;
-  /* Color changing background */
   background: linear-gradient(-45deg, #97f797, #e78dc6, #5bbbde, #23d5ab);
-	background-size: 400% 400%;
-	animation: gradient 15s ease infinite;
-	height: 100%;
+  background-size: 400% 400%;
+  animation: gradient 15s ease infinite;
+  height: 100%;
+}
+/*Using Keyframes to animate gradient back and forth*/
+@keyframes gradient {
+  0% {
+    background-position: 0% 50%;
+  }
+  50% {
+    background-position: 100% 50%;
+  }
+  100% {
+    background-position: 0% 50%;
+  }
+}
+/*Set image size, so it doesn't blow up on tablets*/
+.image-section img {
+  width: 900px;
 }
 
-/* Make it so if you go big then it inceases size
-.image-section img {
-
-
-  width: 100%;
-} 
-*/
-
-.image-section img {
-  width: 900px 
-}
 /* Tabbing */
-/* Initial state for tab contents */
+/* When the content is hidden. The transition adds a slow appear to text */
 [data-tab-content] {
   opacity: 0;
   height: 0;
@@ -77,16 +79,10 @@ aside.image-section {
   transition: opacity 1s ease, height 0.3s ease;
 }
 
-/* Active state for tab contents */
+/* When the content is active and visiable */
 [data-tab-content].active {
   opacity: 1;
   height: auto;
-}
-
-
-body {
-  padding: 0;
-  margin: 0;
 }
 
 .tabs {
@@ -117,9 +113,7 @@ body {
   margin-right: 20px;
 }
 
-
 /* Styling Links to Look Cool */
-
 a:link {
   color: rgb(175, 225, 233);
   background-color: transparent;
@@ -144,57 +138,17 @@ a:active {
   text-decoration: underline;
 }
 
-/* Phone Screen Set Up */
-
-@media screen and (max-width:1000px){
-  section.text-section {
-    width: 100%;
-  }
-  aside.image-section {
-   display: none;
-  }
-  h4 {
-   font-size: 25px;
-  }
-  .tab {
-    font-size: 14px;
-   }
-}
-
-
-
-
-@keyframes gradient {
-	0% {
-		background-position: 0% 50%;
-	}
-	50% {
-		background-position: 100% 50%;
-	}
-	100% {
-		background-position: 0% 50%;
-	}
-}
-
-
-
-/* //old tabbing
-[data-tab-content] {
-  display: none;
-  
-}
-
-.active[data-tab-content] {
-  transition-delay: 10s;
-  display: block;
-  
-}*.
-
-*/
+/*Setting up subtilles to take up space*/
 .mytable {
   display: flex;
   justify-content: space-between;
   max-width: 90%;
+}
+
+.mytable2 {
+  display: flex;
+  justify-content: space-between;
+width: 95%;
 }
 
 .left-column {
@@ -206,3 +160,48 @@ a:active {
   text-align: right;
 }
 
+/*Setting image to grow bigger if screen gets big*/
+@media screen and (min-width: 1550px) {
+  .image-section img {
+    width: 100%;
+  }
+}
+
+/* Tablet Screen Set Up */
+@media screen and (max-width: 1000px) {
+  section.text-section {
+    width: 100%;
+  }
+  aside.image-section {
+    display: none;
+  }
+  h4 {
+    font-size: 25px;
+  }
+  .tab {
+    font-size: 14px;
+  }
+    
+}
+
+/* Phone Screen Set Up */
+@media screen and (max-width: 650px) {
+  section.text-section {
+    width: 100%;
+  }
+
+  aside.image-section {
+    display: none;
+  }
+
+  h4 {
+    font-size: 25px;
+    padding: 5px;
+  }
+  .tab {
+    font-size: 14px;
+  }
+  .mytable2 {
+    display: block;
+  }
+}
